# bojano-homes

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  TODO.md  build.rs  shuttle_prebuild.sh
crates/sheets/: Cargo.toml
crates/sheets/src/: access_token.rs  client.rs  credentials.rs  get_values.rs  lib.rs  scopes.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  ui.config.json  vite.config.js
frontend/src/: global.css  index.css  index.tsx
frontend/src/components/: Box.tsx  Calendar.tsx  Container.tsx  DateRangeWithInput.tsx  ExpenseTable.tsx  Expenses.tsx  ExternalLink.tsx  Overview.tsx  PropertySelector.tsx  RevenueChart.tsx  Table.tsx  Text.tsx  Top.tsx
frontend/src/components/ui/: button.tsx  charts.tsx  date-picker.tsx  select.tsx  skeleton.tsx
frontend/src/lib/: assert.ts  properties.ts
frontend/src/routes/: Overview.tsx  [...404].tsx  layout.tsx  page.tsx
frontend/src/routes/_components/: Calendar.tsx  Expenses.tsx  PropertySelector.tsx  Reservations.tsx  Revenue.tsx  Top.tsx
frontend/src/routes/_lib/: properties.ts
frontend/src/routes/properties/: layout.tsx  page.tsx
frontend/src/routes/properties/[index]/: page.tsx
frontend/src/routes/properties/[index]/summary/: page.tsx
frontend/src/routes/properties/_components/: Sidebar.tsx
public/: tailwind.css
src/: _sheets_v4.rs  main.rs  sheets_v4.rs
src/api/: error.rs  mod.rs  model.rs  routes.rs  service.rs
