[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
backend = { path = "." }
sheets = { path = "crates/sheets" }

axum = { version = "0.7.9", features = ["macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

# TODO: Refactor backend into multiple crates to reduce compile times.
[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.95"
axum.workspace = true
base64 = "0.22.1"
chrono.workspace = true
futures = "0.3.31"
mongodb = "3.1.1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["normalize-path", "fs"] }
sheets = { workspace = true, features = ["axum"] }

[profile.dev.build-override]
opt-level = 3
