[package]
name = "sheets"
version = "0.1.0"
edition = "2021"

[features]
# default = ["axum"]  # for rust_analyzer
axum = ["dep:axum"]

[dependencies]
axum = { workspace = true, optional = true }
base64 = "0.22.1"
chrono.workspace = true
openssl = { version = "0.10.68", features = ["vendored"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
